Add project galleries linked from portfolio

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery | Driggs Custom Homes</title>
+  <title>Project Galleries | Driggs Custom Homes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -31,18 +31,58 @@
   <main>
     <section class="section" style="padding-top:2rem;">
       <div class="wrapper">
-        <div class="tag" style="text-align:center; display:block;">Inspiration</div>
-        <h2>Favorite spaces from recent projects.</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Explore a mix of exteriors, living spaces, and seasonal styling that showcase our warm modern aesthetic and attention to detail.</p>
-        <div class="grid gallery-grid">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+        <div class="tag" style="text-align:center; display:block;">Galleries</div>
+        <h2>Explore each custom build up close.</h2>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Step inside six recent projects to see the textures, layouts, and cozy details that define our warm modern style.</p>
+        <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.25rem;">
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Willow Creek Farmhouse</h3>
+              <p>Bright common spaces, farmhouse trim, and a welcoming wraparound porch.</p>
+              <a class="button secondary" href="gallery-willow-creek.html">Open gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Maple Ridge Retreat</h3>
+              <p>Stone-and-wood balance, hearth-centered living, and layered textures.</p>
+              <a class="button secondary" href="gallery-maple-ridge.html">Open gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Birch Lane Renovation</h3>
+              <p>Light-filled makeover that honors original charm with modern function.</p>
+              <a class="button secondary" href="gallery-birch-lane.html">Open gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Cedar Grove Cottage</h3>
+              <p>Cozy cottage retreat with crafted millwork and outdoor nooks.</p>
+              <a class="button secondary" href="gallery-cedar-grove.html">Open gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Aspen Meadows Estate</h3>
+              <p>Mountain-forward views, airy gathering spaces, and refined finishes.</p>
+              <a class="button secondary" href="gallery-aspen-meadows.html">Open gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Gallery cover placeholder</span></div>
+            <div class="content">
+              <h3>Pinecrest Lodge</h3>
+              <p>Wood beam detailing, family-friendly floorplan, and fireside warmth.</p>
+              <a class="button secondary" href="gallery-pinecrest.html">Open gallery</a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
