--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
             <div class="content">
               <h3>Willow Creek Farmhouse</h3>
               <p>Light-filled gathering spaces, a welcoming front porch, and reclaimed wood accents throughout.</p>
-              <a class="button secondary" href="contact.html">Request details</a>
+              <a class="button secondary" href="gallery-willow-creek.html">View project gallery</a>
             </div>
           </article>
           <article class="card">
@@ -48,7 +48,7 @@
             <div class="content">
               <h3>Maple Ridge Retreat</h3>
               <p>Stone fireplace focal point, open-concept kitchen, and layered textures designed for year-round comfort.</p>
-              <a class="button secondary" href="contact.html">Request details</a>
+              <a class="button secondary" href="gallery-maple-ridge.html">View project gallery</a>
             </div>
           </article>
           <article class="card">
@@ -56,7 +56,31 @@
             <div class="content">
               <h3>Birch Lane Renovation</h3>
               <p>A thoughtful refresh that opened sightlines, added natural light, and honored the home’s original character.</p>
-              <a class="button secondary" href="contact.html">Request details</a>
+              <a class="button secondary" href="gallery-birch-lane.html">View project gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <div class="content">
+              <h3>Cedar Grove Cottage</h3>
+              <p>Cozy cottage charm with crisp millwork, a sunrise breakfast nook, and intimate outdoor living.</p>
+              <a class="button secondary" href="gallery-cedar-grove.html">View project gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <div class="content">
+              <h3>Aspen Meadows Estate</h3>
+              <p>Expansive mountain views, a statement staircase, and layered natural materials for a calm retreat.</p>
+              <a class="button secondary" href="gallery-aspen-meadows.html">View project gallery</a>
+            </div>
+          </article>
+          <article class="card">
+            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <div class="content">
+              <h3>Pinecrest Lodge</h3>
+              <p>Gathering-first floorplan with lodge beams, tucked-away bunk room, and inviting fireside seating.</p>
+              <a class="button secondary" href="gallery-pinecrest.html">View project gallery</a>
             </div>
           </article>
         </div>
