--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Driggs Custom Homes | Home</title>
+  <title>Iron Horse Design Build | Home</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
       <a class="brand" href="index.html">
         <span class="logo-mark" aria-hidden="true">D</span>
         <span class="brand-text">
-          <span class="brand-name">Driggs Custom Homes</span>
+          <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
         </span>
       </a>
@@ -48,7 +48,7 @@
         <div>
           <div class="tag">Our Difference</div>
           <h2>Designed with heart, built with precision.</h2>
-          <p>We’re a father-and-son duo shaping warm, modern homes that celebrate family, gatherings, and the landscapes around them. Every project pairs refined materials with livable layouts, ensuring each room welcomes you in.</p>
+          <p>We’re a mother-and-son duo shaping warm, modern homes that celebrate family, gatherings, and the landscapes around them. Every project pairs refined materials with livable layouts, ensuring each room welcomes you in.</p>
           <div class="features">
             <div class="feature">
               <h3>Custom Builds</h3>
