--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio | Driggs Custom Homes</title>
+  <title>Portfolio |Iron Horse Design Build</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
