Add four populated portfolio galleries

--- a/gallery-lakeside-ranch.html
+++ b/gallery-lakeside-ranch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pinecrest Lodge | Driggs Custom Homes</title>
+  <title>Lakeside Ranch | Driggs Custom Homes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -30,18 +30,31 @@
   <main>
     <section class="section" style="padding-top:2rem;">
       <div class="wrapper">
-        <div class="tag" style="text-align:center; display:block;">Pinecrest Lodge</div>
-        <h2>Pinecrest Lodge</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Lodge beams, fireside seating, and a bunk-ready layout that keeps family and friends close.</p>
+        <div class="tag" style="text-align:center; display:block;">Lakeside Ranch</div>
+        <h2>Lakeside Ranch</h2>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">A warm, timber-framed retreat with generous windows, lake views, and gathering spaces designed for long weekends with family.</p>
         <div class="grid gallery-grid">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/main.JPG" alt="Expansive view of the Lakeside Ranch home with stonework and timber beams." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/living.JPG" alt="Living room with vaulted ceilings, stone fireplace, and plush seating." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/kitchen.JPG" alt="Kitchen with island seating and wood cabinetry open to the living area." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/dining.JPG" alt="Dining space with rustic table set beside large view windows." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/Bedroom.JPG" alt="Bedroom with wood ceilings, soft bedding, and outdoor access." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/Bath.jpeg" alt="Bathroom featuring dual vanities and a spacious glass shower." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/back.JPG" alt="Back patio with stonework, wood beams, and outdoor seating." loading="lazy" />
+          </figure>
         </div>
       </div>
     </section>
