--- a/gallery-modern.html
+++ b/gallery-modern.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aspen Meadows Estate | Driggs Custom Homes</title>
+  <title>Modern Escape | Driggs Custom Homes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -30,18 +30,34 @@
   <main>
     <section class="section" style="padding-top:2rem;">
       <div class="wrapper">
-        <div class="tag" style="text-align:center; display:block;">Aspen Meadows Estate</div>
-        <h2>Aspen Meadows Estate</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Expansive mountain views meet refined finishes, airy gathering spaces, and calm, nature-inspired palettes.</p>
+        <div class="tag" style="text-align:center; display:block;">Modern Escape</div>
+        <h2>Modern Escape</h2>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Clean lines, generous glazing, and tailored finishes create a modern refuge that feels connected to the outdoors.</p>
         <div class="grid gallery-grid">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/front.jpg" alt="Front exterior of the Modern Escape home with bold rooflines and warm lighting." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/livingroom.jpg" alt="Living room with expansive windows, sleek fireplace, and neutral furnishings." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/kitchen.jpg" alt="Modern kitchen with island seating, pendant lighting, and flat-front cabinetry." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/hallway.jpg" alt="Hallway with built-in shelving and warm wood accents." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/bedroom.jpg" alt="Bedroom featuring a soft palette, layered bedding, and bedside sconces." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/office.jpg" alt="Office with a large window, modern desk, and open shelving." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/bath.jpg" alt="Bathroom with minimalist fixtures and a freestanding tub." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/back.jpg" alt="Back patio with seating areas and sliding doors opening to the living space." loading="lazy" />
+          </figure>
         </div>
       </div>
     </section>
