--- a/gallery-mountain.html
+++ b/gallery-mountain.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maple Ridge Retreat | Driggs Custom Homes</title>
+  <title>Mountain Lodge | Driggs Custom Homes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -30,18 +30,34 @@
   <main>
     <section class="section" style="padding-top:2rem;">
       <div class="wrapper">
-        <div class="tag" style="text-align:center; display:block;">Maple Ridge Retreat</div>
-        <h2>Maple Ridge Retreat</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Stone-forward hearth moments, open kitchen flow, and cozy corners designed for slow mornings and lively evenings.</p>
+        <div class="tag" style="text-align:center; display:block;">Mountain Lodge</div>
+        <h2>Mountain Lodge</h2>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Lodge-inspired comfort with a stone hearth, rich wood detailing, and spaces that frame sweeping mountain views.</p>
         <div class="grid gallery-grid">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/front.JPG" alt="Mountain home exterior with porch, stone, and timber brackets." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/livingroom.JPG" alt="Living room with vaulted ceilings and a stone fireplace focal point." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/livingroom2.JPG" alt="Second living area with large windows and comfortable seating." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/kitchen.JPG" alt="Kitchen featuring warm wood cabinetry, island seating, and pendant lights." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/dining.JPEG" alt="Dining room with a wooden table set beside windows and a chandelier." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/fireplace.JPG" alt="Stone fireplace with built-in wood storage and rustic mantle." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/buffet.JPG" alt="Buffet and serving area with glass-front cabinets and warm lighting." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/laundry.jpeg" alt="Laundry and mudroom with storage cabinetry and bench seating." loading="lazy" />
+          </figure>
         </div>
       </div>
     </section>
