--- a/gallery-scandinavian.html
+++ b/gallery-scandinavian.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cedar Grove Cottage | Driggs Custom Homes</title>
+  <title>Scandinavian Retreat | Driggs Custom Homes</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -30,18 +30,34 @@
   <main>
     <section class="section" style="padding-top:2rem;">
       <div class="wrapper">
-        <div class="tag" style="text-align:center; display:block;">Cedar Grove Cottage</div>
-        <h2>Cedar Grove Cottage</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Crisp millwork, a cheerful breakfast nook, and intimate outdoor living set the stage for this cottage retreat.</p>
+        <div class="tag" style="text-align:center; display:block;">Scandinavian Retreat</div>
+        <h2>Scandinavian Retreat</h2>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">Soft neutrals, pale wood, and purposeful lighting create a serene Scandinavian-inspired escape.</p>
         <div class="grid gallery-grid">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/front.jpg" alt="Exterior of the Scandinavian Retreat with simple lines and warm lighting." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/livingroom.jpg" alt="Living room with airy windows, light wood beams, and cozy seating." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/kitchen.jpg" alt="Kitchen featuring light cabinetry, island seating, and modern lighting." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/nook.JPG" alt="Breakfast nook with built-in seating and a round table." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/coffee.jpg" alt="Cozy coffee station with open shelving and wood details." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/office.jpg" alt="Home office with a large window, wooden desk, and minimalist decor." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/bath.jpg" alt="Bathroom with tiled shower, glass enclosure, and warm wood vanity." loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/back.jpg" alt="Back view of the home with deck, windows, and soft exterior lighting." loading="lazy" />
+          </figure>
         </div>
       </div>
     </section>
