--- a/portfolio.html
+++ b/portfolio.html
@@ -32,54 +32,39 @@
       <div class="wrapper">
         <div class="tag" style="text-align:center; display:block;">Recent Work</div>
         <h2>Custom homes with heart.</h2>
-        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">A look at select projects that blend warm materials, practical layouts, and the personal touches that make a house a home.</p>
+        <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">A look at select projects that blend warm materials,
+practical layouts, and the personal touches that make a house a home.</p>
         <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem;">
           <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <img class="card-media" src="Image Files/Lakeside Ranch/main.JPG" alt="Stone and timber exterior of the Lakeside Ranch home." />
             <div class="content">
-              <h3>Willow Creek Farmhouse</h3>
-              <p>Light-filled gathering spaces, a welcoming front porch, and reclaimed wood accents throughout.</p>
-              <a class="button secondary" href="gallery-willow-creek.html">View project gallery</a>
+              <h3>Lakeside Ranch</h3>
+              <p>Open-concept living with lake views, hand-hewn beams, and bright gathering spaces for family weekends.</p>
+              <a class="button secondary" href="gallery-lakeside-ranch.html">View project gallery</a>
             </div>
           </article>
           <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <img class="card-media" src="Image Files/Modern/front.jpg" alt="Modern home exterior with bold lines and expansive windows." />
             <div class="content">
-              <h3>Maple Ridge Retreat</h3>
-              <p>Stone fireplace focal point, open-concept kitchen, and layered textures designed for year-round comfort.</p>
-              <a class="button secondary" href="gallery-maple-ridge.html">View project gallery</a>
+              <h3>Modern Escape</h3>
+              <p>Crisp lines, curated finishes, and indoor-outdoor flow designed for effortless entertaining.</p>
+              <a class="button secondary" href="gallery-modern.html">View project gallery</a>
             </div>
           </article>
           <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <img class="card-media" src="Image Files/Mountain/front.JPG" alt="Mountain home facade with covered porch and timber accents." />
             <div class="content">
-              <h3>Birch Lane Renovation</h3>
-              <p>A thoughtful refresh that opened sightlines, added natural light, and honored the home’s original character.</p>
-              <a class="button secondary" href="gallery-birch-lane.html">View project gallery</a>
+              <h3>Mountain Lodge</h3>
+              <p>Gathering-first layout with a cozy hearth room, natural wood textures, and big-sky views.</p>
+              <a class="button secondary" href="gallery-mountain.html">View project gallery</a>
             </div>
           </article>
           <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
+            <img class="card-media" src="Image Files/Scandinavian/front.jpg" alt="Scandinavian-inspired exterior with clean lines and soft lighting." />
             <div class="content">
-              <h3>Cedar Grove Cottage</h3>
-              <p>Cozy cottage charm with crisp millwork, a sunrise breakfast nook, and intimate outdoor living.</p>
-              <a class="button secondary" href="gallery-cedar-grove.html">View project gallery</a>
-            </div>
-          </article>
-          <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
-            <div class="content">
-              <h3>Aspen Meadows Estate</h3>
-              <p>Expansive mountain views, a statement staircase, and layered natural materials for a calm retreat.</p>
-              <a class="button secondary" href="gallery-aspen-meadows.html">View project gallery</a>
-            </div>
-          </article>
-          <article class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Project image placeholder</span></div>
-            <div class="content">
-              <h3>Pinecrest Lodge</h3>
-              <p>Gathering-first floorplan with lodge beams, tucked-away bunk room, and inviting fireside seating.</p>
-              <a class="button secondary" href="gallery-pinecrest.html">View project gallery</a>
+              <h3>Scandinavian Retreat</h3>
+              <p>Light-filled rooms, pale woods, and layered textures that make every corner feel calm and inviting.</p>
+              <a class="button secondary" href="gallery-scandinavian.html">View project gallery</a>
             </div>
           </article>
         </div>
