--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="wrapper navbar">
       <a class="brand" href="index.html">
-        <span class="logo-mark" aria-hidden="true">D</span>
+        <span class="logo-mark" img src="logo.png"></span>
         <span class="brand-text">
           <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
