Add hero slideshow with gallery imagery

--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
 
   <main>
     <section class="hero">
-      <div class="media-placeholder hero-media" aria-hidden="true">
-        <span>Hero image placeholder</span>
+      <div class="hero-slideshow" aria-hidden="true">
+        <div class="hero-slide" style="background-image:url('Image Files/Lakeside Ranch/main.JPG');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Modern/front.jpg');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Mountain/front.JPG');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Scandinavian/kitchen.jpg');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Lakeside Ranch/living.JPG');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Modern/livingroom.jpg');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Mountain/dining.JPEG');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Scandinavian/back.jpg');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Lakeside Ranch/kitchen.JPG');"></div>
+        <div class="hero-slide" style="background-image:url('Image Files/Scandinavian/livingroom.jpg');"></div>
       </div>
       <div class="content">
         <div class="tag">Since 1987</div>
