--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="wrapper navbar">
       <a class="brand" href="index.html">
-        <span class="logo-mark"><img src="Image Files/logo.png" alt="Iron Horse Logo"></span>
+        <span><img src="Image Files/logo.png" alt="Iron Horse Logo"></span>
         <span class="brand-text">
           <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
