Add real featured spaces imagery to homepage

--- a/index.html
+++ b/index.html
@@ -89,10 +89,18 @@
         <div class="tag" style="text-align:center; display:block;">Featured Spaces</div>
         <h2>Warm, inviting rooms for every season.</h2>
         <div class="grid gallery-grid" style="margin-top:2rem;">
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
-          <div class="media-placeholder" aria-hidden="true"><span>Gallery placeholder</span></div>
+          <figure class="gallery-photo">
+            <img src="Image Files/Scandinavian/office.jpg" alt="Sunlit Scandinavian home office with wooden desk and chair" loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Mountain/dining.JPEG" alt="Mountain retreat dining room with rustic wood table" loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Modern/bedroom.jpg" alt="Modern bedroom with layered textiles and warm lighting" loading="lazy" />
+          </figure>
+          <figure class="gallery-photo">
+            <img src="Image Files/Lakeside Ranch/kitchen.JPG" alt="Lakeside ranch kitchen with white cabinetry and island seating" loading="lazy" />
+          </figure>
         </div>
       </div>
     </section>
