--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <header>
     <div class="wrapper navbar">
       <a class="brand" href="index.html">
-        <span><img src="Image Files/logo.png" alt="Iron Horse Logo"></span>
+        <span class="brand-logo">
+          <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+        </span>
         <span class="brand-text">
           <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
@@ -110,8 +112,10 @@
     <div class="wrapper footer-content">
       <div>
         <div class="brand" style="color: var(--accent);">
-          <span class="logo-mark" aria-hidden="true">D</span>
-          <span class="brand-name">Driggs Custom Homes</span>
+          <span class="brand-logo">
+            <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+          </span>
+          <span class="brand-name">Iron Horse Design Build</span>
         </div>
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
