--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,11 @@
   <header>
     <div class="wrapper navbar">
       <a class="brand" href="index.html">
-        <span class="logo-mark" aria-hidden="true">D</span>
+        <span class="brand-logo">
+          <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+        </span>
         <span class="brand-text">
-          <span class="brand-name">Driggs Custom Homes</span>
+          <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
         </span>
       </a>
@@ -34,7 +36,7 @@
         <h2>Custom homes with heart.</h2>
         <p style="text-align:center; max-width:780px; margin:0 auto 2rem;">A look at select projects that blend warm materials,
 practical layouts, and the personal touches that make a house a home.</p>
-        <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem;">
+        <div class="grid portfolio-grid">
           <article class="card">
             <img class="card-media" src="Image Files/Lakeside Ranch/main.JPG" alt="Stone and timber exterior of the Lakeside Ranch home." />
             <div class="content">
@@ -76,8 +78,10 @@ practical layouts, and the personal touches that make a house a home.</p>
     <div class="wrapper footer-content">
       <div>
         <div class="brand" style="color: var(--accent);">
-          <span class="logo-mark" aria-hidden="true">D</span>
-          <span class="brand-name">Driggs Custom Homes</span>
+          <span class="brand-logo">
+            <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+          </span>
+          <span class="brand-name">Iron Horse Design Build</span>
         </div>
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
