--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
         </span>
         <span class="brand-text">
-          <span class="brand-name">Iron Horse Design Build</span>
-          <span class="brand-tagline">Est. 1987</span>
+          <span class="brand-name"></span>
+          <span class="brand-tagline">Est. 2013</span>
         </span>
       </a>
       <nav aria-label="Primary">
