--- a/gallery-modern.html
+++ b/gallery-modern.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Modern Escape | Driggs Custom Homes</title>
+  <title>Modern Escape | Iron Horse Design Build</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
     <div class="wrapper navbar">
       <a class="brand" href="index.html">
-        <span class="logo-mark" aria-hidden="true">D</span>
+        <span class="brand-logo">
+          <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+        </span>
         <span class="brand-text">
-          <span class="brand-name">Driggs Custom Homes</span>
           <span class="brand-tagline">Est. 1987</span>
         </span>
       </a>
@@ -67,8 +68,9 @@
     <div class="wrapper footer-content">
       <div>
         <div class="brand" style="color: var(--accent);">
-          <span class="logo-mark" aria-hidden="true">D</span>
-          <span class="brand-name">Driggs Custom Homes</span>
+          <span class="brand-logo">
+            <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
+          </span>
         </div>
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
