Simplify branding and add contact map

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
           <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
         </span>
         <span class="brand-text">
-          <span class="brand-name">Iron Horse Design Build</span>
           <span class="brand-tagline">Est. 1987</span>
         </span>
       </a>
@@ -35,16 +34,14 @@
         <div class="tag" style="text-align:center; display:block;">Get in touch</div>
         <h2>Let’s talk about your next home.</h2>
         <div class="contact-wrapper" style="margin-top:2rem;">
-          <div class="card">
-            <div class="media-placeholder card-media" aria-hidden="true"><span>Contact photo placeholder</span></div>
+          <div class="card map-card">
+            <div class="map-embed">
+              <iframe title="Map showing 1420 ID-33 #201, Driggs, ID 83422" src="https://maps.google.com/maps?q=1420%20ID-33%20%23201%2C%20Driggs%2C%20ID%2083422&output=embed" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
             <div class="content">
-              <h3>We’re here to help</h3>
-              <p>Share a few details about your project and we’ll follow up with next steps, timelines, and ways we can collaborate.</p>
-              <div class="socials">
-                <a class="social-pill" href="#" aria-label="Facebook">FB</a>
-                <a class="social-pill" href="#" aria-label="Instagram">IG</a>
-                <a class="social-pill" href="#" aria-label="Twitter">TW</a>
-              </div>
+              <h3>Visit our studio</h3>
+              <p>1420 ID-33 #201<br />Driggs, ID 83422</p>
+              <a class="button" href="https://www.google.com/maps/dir/?api=1&destination=1420+ID-33+%23201%2C+Driggs%2C+ID+83422" target="_blank" rel="noreferrer">Start directions</a>
             </div>
           </div>
           <form>
