Replace home card placeholder with family photo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
           </div>
         </div>
         <div class="card">
-          <div class="media-placeholder card-media" aria-hidden="true"><span>Project photo placeholder</span></div>
+          <img
+            class="card-media"
+            src="Image Files/Aboutpage Images/family_pic.jpg"
+            alt="Jackson and Sam Driggs smiling together in their family home"
+            loading="lazy"
+          />
           <div class="content">
             <h3>Rooted in family</h3>
             <p>Generations of craftsmanship inform our process. We treat every home as if it were our own, balancing timeless design with everyday comfort.</p>
