--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </section>
 
-    <section class="section" style="background: #fff;">
+    <section class="section" style="background: #ffffff;">
       <div class="wrapper">
         <div class="tag" style="text-align:center; display:block;">Featured Spaces</div>
         <h2>Warm, inviting rooms for every season.</h2>
