Fix HTML entity for ampersand in owners' namest

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <img src="Image Files/owners.png" alt="Jackson and Sam Driggs, owners of Iron Horse Design Build">
           </div>
           <div class="owners-content">
-            <h3>Jackson &amp; Sam Driggs</h3>
+            <h3>Jackson & Sam Driggs</h3>
             <p>Brothers, craftsmen, and co-owners of Iron Horse, Jackson and Sam bring complementary strengths to every project. Jackson leads design and client vision, while Sam oversees field craftsmanship and the trusted crews who bring each plan to life.</p>
             <p>They stay hands-on from the first sketch through the final walkthrough, ensuring every detail feels intentional, welcoming, and enduring for the families who call these homes their own.</p>
             <ul class="owners-list">
