Add static mountain hero image to about page

--- a/about.html
+++ b/about.html
@@ -30,9 +30,11 @@
 
   <main>
     <section class="hero" style="min-height:50vh;">
-      <div class="media-placeholder hero-media" aria-hidden="true">
-        <span>About hero placeholder</span>
-      </div>
+      <div
+        class="hero-media hero-photo"
+        style="background-image:url('Image Files/mountains.jpg');"
+        aria-hidden="true"
+      ></div>
       <div class="content">
         <div class="tag">Our Story</div>
         <h1>Generations of craftsmanship and care.</h1>
