--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="content">
         <div class="tag">Since 2013</div>
-        <h1>Building homes that feel like home.</h1>
+        <h1>Building Houses That Feel Like Home.</h1>
         <p>Family-owned craftsmanship, thoughtful design, and a commitment to the communities we serve across the Northwest.</p>
         <div style="display:flex; gap:0.75rem; justify-content:center; flex-wrap:wrap;">
           <a class="button" href="contact.html">Start a Project</a>
