Remove legacy tagline and update footer styling

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <footer>
     <div class="wrapper footer-content">
       <div>
-        <div class="brand" style="color: var(--accent);">
+        <div class="brand" style="color: var(--white);">
           <span class="brand-logo">
             <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
           </span>
