--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,6 @@
           <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
         </span>
         <span class="brand-text">
-          <span class="brand-tagline">Est. 1987</span>
         </span>
       </a>
       <nav aria-label="Primary">
@@ -76,7 +75,7 @@ practical layouts, and the personal touches that make a house a home.</p>
   <footer>
     <div class="wrapper footer-content">
       <div>
-        <div class="brand" style="color: var(--accent);">
+        <div class="brand" style="color: var(--white);">
           <span class="brand-logo">
             <img src="Image Files/logo.png" alt="Iron Horse Design Build logo">
           </span>
