--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           <p>We partner closely with clients and local trades to create homes that stand the test of time—spaces meant for loud dinners, quiet mornings, and everything in between.</p>
         </div>
         <div class="card">
-          <div class="media-placeholder card-media" aria-hidden="true"><span>Team photo placeholder</span></div>
+          <img class="card-media" src="Image Files/family.jpg" alt="Family photo of the Iron Horse Design Build team"> 
           <div class="content">
             <h3>People first</h3>
             <p>We believe homes should reflect the people inside them. That means attentive listening, thoughtful material selections, and honest communication from day one.</p>
