Update footer social links

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         </div>
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
-          <a class="social-pill" href="#" aria-label="Facebook">FB</a>
-          <a class="social-pill" href="#" aria-label="Instagram">IG</a>
-          <a class="social-pill" href="#" aria-label="Twitter">TW</a>
+          <a class="social-pill" href="https://plus.google.com" aria-label="Google Plus">G+</a>
+          <a class="social-pill" href="https://myspace.com" aria-label="MySpace">MySpace</a>
+          <a class="social-pill" href="https://vine.co" aria-label="Vine">Vine</a>
         </div>
       </div>
       <nav aria-label="Footer">
