--- a/gallery-lakeside-ranch.html
+++ b/gallery-lakeside-ranch.html
@@ -71,9 +71,15 @@
         </div>
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
-          <a class="social-pill" href="https://plus.google.com" aria-label="Google Plus">G+</a>
-          <a class="social-pill" href="https://myspace.com" aria-label="MySpace">MySpace</a>
-          <a class="social-pill" href="https://vine.co" aria-label="Vine">Vine</a>
+          <a class="social-pill" href="https://plus.google.com" aria-label="Google Plus">
+            <img src="Image Files/Scocials/google+.png" alt="" class="social-icon" aria-hidden="true">
+          </a>
+          <a class="social-pill" href="https://myspace.com" aria-label="MySpace">
+            <img src="Image Files/Scocials/myspace.png" alt="" class="social-icon" aria-hidden="true">
+          </a>
+          <a class="social-pill" href="https://vine.co" aria-label="Vine">
+            <img src="Image Files/Scocials/Vine.png" alt="" class="social-icon" aria-hidden="true">
+          </a>
         </div>
       </div>
       <nav aria-label="Footer">
