Enlarge Google Plus icon

--- a/gallery-lakeside-ranch.html
+++ b/gallery-lakeside-ranch.html
@@ -72,7 +72,7 @@
         <p>Thoughtfully crafted homes in the Northwest, made for gatherings, laughter, and quiet mornings.</p>
         <div class="socials">
           <a class="social-pill" href="https://plus.google.com" aria-label="Google Plus">
-            <img src="Image Files/Scocials/google+.png" alt="" class="social-icon" aria-hidden="true">
+            <img src="Image Files/Scocials/google+.png" alt="" class="social-icon social-icon-google" aria-hidden="true">
           </a>
           <a class="social-pill" href="https://myspace.com" aria-label="MySpace">
             <img src="Image Files/Scocials/myspace.png" alt="" class="social-icon" aria-hidden="true">
